--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@expo/webpack-config": "^18.0.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/cli-server-api": "^18.0.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.3.17",
-    "expo": "~53.0.0",
+    "expo": "^53.0.12",
     "expo-camera": "~16.1.8",
     "expo-font": "~13.3.1",
     "expo-image-picker": "~16.1.4",
@@ -39,7 +40,9 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~19.0.10",
     "@types/react-native": "~0.73.0",
-    "typescript": "^5.3.0"
+    "react-native-dotenv": "^3.4.11",
+    "typescript": "^5.3.0",
+    "webpack-dev-server": "^4.15.1"
   },
   "private": true
 }
