--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.3.17",
     "expo": "^53.0.12",
+    "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.1.8",
     "expo-font": "~13.3.1",
     "expo-image-picker": "~16.1.4",
