--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "^53.0.12",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.1.8",
+    "expo-document-picker": "~13.1.6",
     "expo-font": "~13.3.1",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.5",
@@ -35,8 +36,8 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-web": "^0.20.0",
-    "expo-document-picker": "~13.1.6"
+    "react-native-video": "^6.15.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
